tolk-tester/tests/invalid-symbol/err-2618.tolk
enum Unknown {
    A = KKK,
}

/**
@compilation_should_fail
@stderr undefined symbol `KKK`
@stderr A =
 */
